lesson23/rbac-and-diag-pod.yaml
apiVersion: v1
kind: Pod
  meta
name: wp-diagnostic
spec:
  serviceAccountName: wp-diag-sa
  containers:
    - name: debugger
      image: bitnami/kubectl
      command: ["/bin/sh", "-c"]
      args:
        - |
          echo "Starting diagnostics..."
          while true; do
            echo "--- $(date) ---"
            echo "Checking for WordPress pods:"
            kubectl get pods -l app=wordpress -o wide
            echo ""
            sleep 15
          done
