lesson23/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
  meta
name: deny-external-mysql-access
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: wordpress
      ports:
        - protocol: TCP
          port: 3306
